Modified yaml files to include Anders' changes and added MSSM9 yaml file  Changes to be committed: 	modified:   CMSSM.yaml 	modified:   ColliderBit_CMSSM.yaml 	new file:   MSSM9.yaml

--- a/yaml_files/ColliderBit_CMSSM.yaml
+++ b/yaml_files/ColliderBit_CMSSM.yaml
@@ -101,14 +101,13 @@ ObsLikes:
     - purpose:    LogLike
       capability: LHC_Combined_LogLike
 
-    - purpose:    Observable
-      capability: SLHA1_violation
-
-    - purpose:    Observable
-      capability: MSSM_spectrum
-      type:       map_str_dbl
+    - purpose:    LogLike
+      capability: LHC_Higgs_LogLike
 
     # Calculate the LEP likelihoods
+    - purpose:    LogLike
+      capability: LEP_Higgs_LogLike
+
     - purpose:    LogLike
       capability: ALEPH_Selectron_LLike
 
@@ -154,15 +153,24 @@ ObsLikes:
     - purpose:    LogLike
       capability: OPAL_Neutralino_Hadronic_LLike
 
-    # Calculate the LEP Higgs likelihood
+    # Other observables
+    - purpose:    likelihood_details
+      capability: LHC_LogLikes
 
-    - purpose:    LogLike
-      capability: LEP_Higgs_LogLike
+    - purpose:    Observable
+      capability: LHC_signals
 
-    # Calculate the LHC Higgs likelihood
+    - purpose:    Observable
+      capability: LHCEventLoopInfo
 
-    - purpose:    LogLike
-      capability: LHC_Higgs_LogLike
+    - purpose:    Observable
+      capability: SLHA1_violation
+
+    - purpose:    Observable
+      capability: MSSM_spectrum
+      type:       map_str_dbl
+
+
 
 Rules:
 
@@ -239,10 +247,18 @@ Rules:
   - capability:  ColliderOperator
     function: operateLHCLoop
     options:
-      nEvents: [5000, 5000]
       pythiaNames: ["Pythia_SUSY_LHC_8TeV", "Pythia_SUSY_LHC_13TeV"]
       silenceLoop: false
 
+  # Choose statistical settings for Monte Carlo event generator
+  - capability: MC_ConvergenceSettings
+    options:
+      min_nEvents: [5000,5000]
+      max_nEvents: [50000,50000]
+      events_between_convergence_checks: [5000,5000]
+      target_fractional_uncert: [0.3,0.3]
+      halt_when_systematic_dominated: true
+      all_SR_must_converge: false
 
   # Choose which getPythia to use
   # For a scan, we use the one that does not expect an input SLHA file (i.e. do not use getPythiaFileReader)
@@ -322,21 +338,6 @@ Rules:
       antiktR: [0.4,0.4]
 
 
-  # Specify the list of analyses to run after Delphes performs detector simulation
-  # NOTE: The use of Delphes currently only works when running with OMP_NUM_THREADS=1
-  - capability: DetAnalysisContainer
-    function: getDetAnalysisContainer
-    options:
-      analyses: [[], []]
-      # analyses: [ ["ATLAS_8TeV_0LEP_20invfb",
-      #              "ATLAS_8TeV_0LEPStop_20invfb",
-      #              "ATLAS_8TeV_1LEPStop_20invfb",
-      #              "ATLAS_8TeV_2bStop_20invfb",
-      #              "ATLAS_8TeV_2LEPEW_20invfb",
-      #              "ATLAS_8TeV_2LEPStop_20invfb",
-      #              "ATLAS_8TeV_3LEPEW_20invfb"],
-      #              [] ]
-
   # Specify the list of ATLAS analyses to run with BuckFast
   # These will get run if BuckFast is turned on
   - capability: ATLASAnalysisContainer
@@ -344,13 +345,21 @@ Rules:
     options:
       analyses: [ ["ATLAS_8TeV_0LEP_20invfb",
                    "ATLAS_8TeV_0LEPStop_20invfb",
+                   "ATLAS_8TeV_1LEPbb_20invfb",
                    "ATLAS_8TeV_1LEPStop_20invfb",
                    "ATLAS_8TeV_2bStop_20invfb",
                    "ATLAS_8TeV_2LEPEW_20invfb",
                    "ATLAS_8TeV_2LEPStop_20invfb",
                    "ATLAS_8TeV_3LEPEW_20invfb"],
                   ["ATLAS_13TeV_0LEP_13invfb",
-                   "ATLAS_13TeV_MultiLEP_36invfb"] ]
+                   "ATLAS_13TeV_MultiLEP_36invfb",
+                   "ATLAS_13TeV_0LEPStop_20invfb",
+                   "ATLAS_13TeV_2LEPStop_36invfb",
+                   "ATLAS_13TeV_RJ3L_lowmass_36invfb",
+                   "ATLAS_13TeV_2bMET_36invfb"] ]
+
+                   # "ATLAS_13TeV_1LEPStop_36invfb",
+                   #
 
   # Specify the list of CMS analyses to run with BuckFast
   # These will get run if BuckFast is turned on
@@ -361,10 +370,15 @@ Rules:
                    "CMS_8TeV_2LEPDMTOP_20invfb",
                    "CMS_8TeV_3LEPEW_20invfb",
                    "CMS_8TeV_MONOJET_20invfb"],
-                  ["CMS_13TeV_1LEPbb_36invfb",
-                   "CMS_13TeV_MultiLEP_36invfb",
+                  ["CMS_13TeV_0LEP_13invfb",
+                   "CMS_13TeV_1LEPbb_36invfb",
+                   "CMS_13TeV_2LEPsoft_36invfb",
                    "CMS_13TeV_2OSLEP_36invfb",
-                   "CMS_13TeV_2LEPsoft_36invfb"] ]
+                   "CMS_13TeV_1LEPStop_36invfb",
+                   "CMS_13TeV_MultiLEP_36invfb"] ]
+
+                   # "CMS_13TeV_2LEPStop_36invfb",
+                   # "CMS_13TeV_MONOJET_36invfb",
 
   # Specify the list of identity analyses to run
   # These will be run if the identity simulation is turned on
@@ -387,7 +401,7 @@ Rules:
 
     # Use lognormal errors when marginalising the LHC Poisson likelihoods over systematic uncertainties
     # Can change "_lognormal_" to "_gaussian_" if you prefer
-  - capability: LHC_Combined_LogLike
+  - capability: LHC_LogLikes
     backends:
     - {capability: lnlike_marg_poisson_lognormal_error}
 
