--- a/yaml_files/MSSM20atQ_mApoint_FEFTH.yaml
+++ b/yaml_files/MSSM20atQ_mApoint_FEFTH.yaml
@@ -479,7 +479,7 @@ Rules:
       rho0_obserr: 0.15
 
   # Choose which type of marginalised Poisson likelihood to use for LHC likelihoods
-  - capability: LHC_Combined_LogLike
+  - capability: LHC_LogLikes
     backends:
     - {capability: lnlike_marg_poisson_lognormal_error}
 
@@ -555,7 +555,6 @@ Rules:
   - capability:  ColliderOperator
     function: operateLHCLoop
     options:
-      nEvents: [20000]
       pythiaNames: ["Pythia_SUSY_LHC_8TeV"]
       silenceLoop: true
 
