--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -535,11 +535,11 @@ Rules:
                   ["ATLAS_13TeV_0LEP_13invfb",
                    "ATLAS_13TeV_MultiLEP_36invfb",
                    "ATLAS_13TeV_0LEPStop_20invfb",
+                   "ATLAS_13TeV_1LEPStop_36invfb",
                    "ATLAS_13TeV_2LEPStop_36invfb",
                    "ATLAS_13TeV_RJ3L_lowmass_36invfb",
                    "ATLAS_13TeV_2bMET_36invfb"] ]
 
-                   # "ATLAS_13TeV_1LEPStop_36invfb",
 
   # CMS analysis setup
   - capability: CMSAnalysisContainer
@@ -554,9 +554,9 @@ Rules:
                    "CMS_13TeV_2LEPsoft_36invfb",
                    "CMS_13TeV_2OSLEP_36invfb",
                    "CMS_13TeV_1LEPStop_36invfb",
+                   "CMS_13TeV_2LEPStop_36invfb",
                    "CMS_13TeV_MultiLEP_36invfb"] ]
 
-                   # "CMS_13TeV_2LEPStop_36invfb",
                    # "CMS_13TeV_MONOJET_36invfb",
 
   # Choose Monte Carlo event simulator.
