Fixed luminosity in Analysis_CMS_13TeV_0LEP_36invfb.cpp and update CMSSM.yaml
	modified:   ColliderBit/src/analyses/Analysis_CMS_13TeV_0LEP_36invfb.cpp
	modified:   yaml_files/CMSSM.yaml

--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -532,7 +532,7 @@ Rules:
                    "ATLAS_8TeV_2LEPEW_20invfb",
                    "ATLAS_8TeV_2LEPStop_20invfb",
                    "ATLAS_8TeV_3LEPEW_20invfb"],
-                  ["ATLAS_13TeV_0LEP_13invfb",
+                  ["ATLAS_13TeV_0LEP_36invfb",
                    "ATLAS_13TeV_MultiLEP_36invfb",
                    "ATLAS_13TeV_0LEPStop_20invfb",
                    "ATLAS_13TeV_1LEPStop_36invfb",
@@ -549,14 +549,14 @@ Rules:
                    "CMS_8TeV_2LEPDMTOP_20invfb",
                    "CMS_8TeV_3LEPEW_20invfb",
                    "CMS_8TeV_MONOJET_20invfb"],
-                  ["CMS_13TeV_0LEP_13invfb",
+                  ["CMS_13TeV_0LEP_36invfb",
                    "CMS_13TeV_1LEPbb_36invfb",
-                   "CMS_13TeV_2LEPsoft_36invfb",
                    "CMS_13TeV_2OSLEP_36invfb",
                    "CMS_13TeV_1LEPStop_36invfb",
                    "CMS_13TeV_2LEPStop_36invfb",
                    "CMS_13TeV_MultiLEP_36invfb"] ]
 
+                   # "CMS_13TeV_2LEPsoft_36invfb",
                    # "CMS_13TeV_MONOJET_36invfb",
 
   # Choose Monte Carlo event simulator.
