Added new analysis to MSSM9 yaml file and lepton universality observables  Changes to be committed: 	modified:   CMSSM.yaml 	modified:   FlavBit_CMSSM.yaml 	modified:   MSSM9.yaml

--- a/yaml_files/FlavBit_CMSSM.yaml
+++ b/yaml_files/FlavBit_CMSSM.yaml
@@ -80,6 +80,9 @@ ObsLikes:
     - purpose:    LogLike
       capability: b2sgamma_LL
 
+    - purpose:    LogLike
+      capability: LUV_LL
+
     # SM nuisance parameter likelihoods
     - capability: lnL_t_mass
       purpose:    LogLike
