--- a/yaml_files/MSSM9.yaml
+++ b/yaml_files/MSSM9.yaml
@@ -173,6 +173,9 @@ ObsLikes:
     - purpose:    LogLike
       capability: b2sgamma_LL
 
+    - purpose:    LogLike
+      capability: LUV_LL
+
     # Precision physics likelihoods
     - capability: lnL_W_mass
       purpose:    LogLike
@@ -541,14 +544,14 @@ Rules:
                    "ATLAS_8TeV_2LEPEW_20invfb",
                    "ATLAS_8TeV_2LEPStop_20invfb",
                    "ATLAS_8TeV_3LEPEW_20invfb"],
-                  ["ATLAS_13TeV_0LEP_13invfb",
+                  ["ATLAS_13TeV_0LEP_36invfb",
                    "ATLAS_13TeV_MultiLEP_36invfb",
-                   "ATLAS_13TeV_0LEPStop_20invfb",
+                   "ATLAS_13TeV_0LEPStop_36invfb",
+                   "ATLAS_13TeV_1LEPStop_36invfb",
                    "ATLAS_13TeV_2LEPStop_36invfb",
                    "ATLAS_13TeV_RJ3L_lowmass_36invfb",
                    "ATLAS_13TeV_2bMET_36invfb"] ]
 
-                   # "ATLAS_13TeV_1LEPStop_36invfb",
 
   # CMS analysis setup
   - capability: CMSAnalysisContainer
@@ -558,14 +561,14 @@ Rules:
                    "CMS_8TeV_2LEPDMTOP_20invfb",
                    "CMS_8TeV_3LEPEW_20invfb",
                    "CMS_8TeV_MONOJET_20invfb"],
-                  ["CMS_13TeV_0LEP_13invfb",
+                  ["CMS_13TeV_0LEP_36invfb",
                    "CMS_13TeV_1LEPbb_36invfb",
-                   "CMS_13TeV_2LEPsoft_36invfb",
                    "CMS_13TeV_2OSLEP_36invfb",
                    "CMS_13TeV_1LEPStop_36invfb",
+                   "CMS_13TeV_2LEPStop_36invfb",
                    "CMS_13TeV_MultiLEP_36invfb"] ]
 
-                   # "CMS_13TeV_2LEPStop_36invfb",
+                   # "CMS_13TeV_2LEPsoft_36invfb",
                    # "CMS_13TeV_MONOJET_36invfb",
 
   # Choose Monte Carlo event simulator and number of events to run.
