--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -161,6 +161,9 @@ ObsLikes:
     - purpose:    LogLike
       capability: b2sgamma_LL
 
+    - purpose:    LogLike
+      capability: LUV_LL
+
     # Precision physics likelihoods
     - capability: lnL_W_mass
       purpose:    LogLike
