--- a/yaml_files/CosmoBit_planck_lite.yaml
+++ b/yaml_files/CosmoBit_planck_lite.yaml
@@ -1,13 +1,15 @@
 ##########################################################################
 ## Minimal CosmoBit application  (in YAML)
-## (Using the Planck-lite likelihood for high-l)
+##   - Using the Planck-lite likelihood for high-l
+##     (Either TT or TTTEEE -> Specified in 'Rules')
+##   - Using Multinest as sampler
 ##
 ## Selim Hotinli <selim.hotinli14@imperial.ac.uk>
 ## 2016-17
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
-## 2017, Nov
-## 2018, Jan
+## 2017 Nov
+## 2018 Jan,Feb
 ##########################################################################
 
 
@@ -82,7 +84,24 @@ Rules:
 #    function: function_Planck_high_TTTEEE_lite_loglike
 #    module: CosmoBit
 
- 
+
+#####
+##  To reproduce the LCDM results of Planck it is
+##  apparently needed to include one massive neutrino
+##  species with a mass of 0.06 eV. To include this
+##  the following optional inputs must be given to
+##  CLASS. (k_pivot = 0.05 is needed for the right
+##  value of A_s, according to J. Lesgourgues)
+####
+
+  - capability: class_set_parameter
+    options:
+      N_ur: 2.0328
+      N_ncdm: 1.
+      m_ncdm: 0.06
+      T_ncdm: 0.71611
+      k_pivot: 0.05
+  
 #======== Logging setup ========
 Lxogger:
   redirection:
