Removed SM_Neutrinos model

--- a/yaml_files/RHN.yaml
+++ b/yaml_files/RHN.yaml
@@ -12,13 +12,10 @@ Parameters:
     mBmB    :  4.18000000E+00 # mb(mb)^MSbar &
     mT      :  1.73340000E+02 # mtop(pole) $
     mTau    :  1.77682000E+00 # mtau(pole) §
-    mNu3    :               0 # mnu3(pole)
 
     # SLHA2
     mE      :  5.10998928E-04 # melectron(pole) § **
-    mNu1    :               0 # mnu1(pole)
     mMu     :  1.05658372E-01 # mmuon(pole) §
-    mNu2    :               0 # mnu2(pole)
     mD      :  4.80000000E-03 # md(2 GeV)^MSbar @
     mU      :  2.30000000E-03 # mu(2 GeV)^MSbar @
     mS      :  9.50000000E-02 # ms(2 GeV)^MSbar @
@@ -33,18 +30,25 @@ Parameters:
     CKM_rhobar  :  0.117
     CKM_etabar  :  0.353
 
-#    alpha1:
-#      range: [0, 6.283]
-#    alpha2:
-#      range: [0, 6.283]
-#    delta13:
-#      range: [0, 6.283]
-#    theta12:
-#      fixed_value: 0.5843
-#    theta23:
-#     fixed_value: 0.7382
-#    theta13:
-#      fixed_value: 0.1483
+    mNu1:
+      fixed_value: 2.300E-10
+    mNu2:
+      fixed_value: 2.30163E-10
+    mNu3:
+      fixed_value: 2.35281E-10
+
+    alpha1:
+      range: [0, 6.283]
+    alpha2:
+      range: [0, 6.283]
+    delta13:
+      range: [0, 6.283]
+    theta12:
+      fixed_value: 0.5843
+    theta23:
+     fixed_value: 0.7382
+    theta13:
+      fixed_value: 0.1483
 
   # Higgs bosom parameters
   StandardModel_Higgs:
@@ -86,36 +90,6 @@ Parameters:
       range: [0.159, 0.193]
     L_Xe:
       range: [0.178, 0.211]
-
-  StandardModel_Neutrinos:
-#    ordering:
-#      fixed_value: 1  # 1: normal ordering, 0: inverse ordering
-#    min_mass:
-#      fixed_value: 0  # 0: massless, 1: 0.23 eV
-#    md21:
-#      fixed_value: 7.5e-23
-#    md31:
-#      fixed_value: 2.457e-21
-#    md23:
-#      fixed_value: 2.449e-21
-    alpha1:
-      range: [0, 6.283]
-    alpha2:
-      range: [0, 6.283]
-    delta13:
-      range: [0, 6.283]
-    theta12:
-      fixed_value: 0.5843
-    theta23:
-      fixed_value: 0.7382
-    theta13:
-      fixed_value: 0.1483
-    mnu1:
-      fixed_value: 2.300E-10
-    mnu2:
-      fixed_value: 2.30163E-10
-    mnu3:
-      fixed_value: 2.35281E-10
 
 
 Priors:
