MSSM9 only includes 13TeV analyses

--- a/yaml_files/MSSM9.yaml
+++ b/yaml_files/MSSM9.yaml
@@ -564,18 +564,18 @@ Rules:
                   ["CMS_13TeV_0LEP_36invfb",
                    "CMS_13TeV_1LEPbb_36invfb",
                    "CMS_13TeV_2OSLEP_36invfb",
+                   "CMS_13TeV_2LEPsoft_36invfb",
                    "CMS_13TeV_1LEPStop_36invfb",
                    "CMS_13TeV_2LEPStop_36invfb",
                    "CMS_13TeV_MultiLEP_36invfb"] ]
 
-                   # "CMS_13TeV_2LEPsoft_36invfb",
                    # "CMS_13TeV_MONOJET_36invfb",
 
   # Choose Monte Carlo event simulator and number of events to run.
   - capability:  ColliderOperator
     function: operateLHCLoop
     options:
-      pythiaNames: ["Pythia_SUSY_LHC_8TeV"]
+      pythiaNames: ["Pythia_SUSY_LHC_13TeV"]
       silenceLoop: true
 
   # Choose statistical settings for Monte Carlo event generator
