Commented out covariance matrix from Analysis_CMS_13TeV_MONOJET_36invfb.cpp (too time-consuming to use) and updated ColliderBit settings in CMSSM.yaml and MSSM9.yaml. (Only use 13 TeV analyses.)
	modified:   ColliderBit/src/analyses/Analysis_CMS_13TeV_MONOJET_36invfb.cpp
	modified:   yaml_files/CMSSM.yaml
	modified:   yaml_files/MSSM9.yaml

--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -72,8 +72,8 @@ Printer:
     output_file: "CMSSM.hdf5"
     group: "/CMSSM"
 
-  #printer: ascii
-  #options:
+  # printer: ascii
+  # options:
   #  buffer_length: 1
   #  delete_file_on_restart: true
   #  output_file: "gambit_output.txt"
@@ -466,13 +466,6 @@ Rules:
       rho0_obs: 0.4
       rho0_obserr: 0.15
 
-  # Choose which type of marginalised Poisson likelihood to use for LHC likelihoods
-  - capability: LHC_LogLikes
-    backends:
-    - {capability: lnlike_marg_poisson_lognormal_error}
-    options:
-      covariance_samples: 100000
-
   # Values to be used in local disk rotation speed likelihood (all values in km/s)
   - capability: lnL_vrot
     function: lnL_vrot_gaussian
@@ -507,37 +500,30 @@ Rules:
       ms_central: 95.E-03
       ms_error: 5.E-03
 
+
   # ATLAS detector simulation
   - capability: SimpleSmearingSim
     type: "ColliderBit::BuckFastSmearATLAS"
     function: getBuckFastATLAS
     options:
-      partonOnly: [false,false]
-      antiktR: [0.4,0.4]
-      useDetector: [true,true]
+      partonOnly: [false]
+      antiktR: [0.4]
+      useDetector: [true]
 
   # CMS detector simulation
   - capability: SimpleSmearingSim
     type: "ColliderBit::BuckFastSmearCMS"
     function: getBuckFastCMS
     options:
-      partonOnly: [false,false]
-      antiktR: [0.5,0.4]
-      useDetector: [true,true]
+      partonOnly: [false]
+      antiktR: [0.4]
+      useDetector: [true]
 
   # ATLAS analysis setup.
   - capability: ATLASAnalysisContainer
     function: getATLASAnalysisContainer
     options:
-      analyses: [ ["ATLAS_8TeV_0LEP_20invfb",
-                   "ATLAS_8TeV_0LEPStop_20invfb",
-                   "ATLAS_8TeV_1LEPbb_20invfb",
-                   "ATLAS_8TeV_1LEPStop_20invfb",
-                   "ATLAS_8TeV_2bStop_20invfb",
-                   "ATLAS_8TeV_2LEPEW_20invfb",
-                   "ATLAS_8TeV_2LEPStop_20invfb",
-                   "ATLAS_8TeV_3LEPEW_20invfb"],
-                  ["ATLAS_13TeV_0LEP_36invfb",
+      analyses: [ ["ATLAS_13TeV_0LEP_36invfb",
                    "ATLAS_13TeV_MultiLEP_36invfb",
                    "ATLAS_13TeV_0LEPStop_36invfb",
                    "ATLAS_13TeV_1LEPStop_36invfb",
@@ -545,39 +531,33 @@ Rules:
                    "ATLAS_13TeV_RJ3L_lowmass_36invfb",
                    "ATLAS_13TeV_2bMET_36invfb"] ]
 
-
   # CMS analysis setup
   - capability: CMSAnalysisContainer
     function: getCMSAnalysisContainer
     options:
-      analyses: [ ["CMS_8TeV_1LEPDMTOP_20invfb",
-                   "CMS_8TeV_2LEPDMTOP_20invfb",
-                   "CMS_8TeV_3LEPEW_20invfb",
-                   "CMS_8TeV_MONOJET_20invfb"],
-                  ["CMS_13TeV_0LEP_36invfb",
+      analyses: [ ["CMS_13TeV_0LEP_36invfb",
                    "CMS_13TeV_1LEPbb_36invfb",
                    "CMS_13TeV_2OSLEP_36invfb",
                    "CMS_13TeV_2LEPsoft_36invfb",
                    "CMS_13TeV_1LEPStop_36invfb",
                    "CMS_13TeV_2LEPStop_36invfb",
-                   "CMS_13TeV_MultiLEP_36invfb"] ]
-
-                   # "CMS_13TeV_MONOJET_36invfb",
+                   "CMS_13TeV_MultiLEP_36invfb",
+                   "CMS_13TeV_MONOJET_36invfb" ] ]
 
   # Choose Monte Carlo event simulator.
   - capability:  ColliderOperator
     function: operateLHCLoop
     options:
-      pythiaNames: ["Pythia_SUSY_LHC_8TeV", "Pythia_SUSY_LHC_13TeV"]
+      pythiaNames: ["Pythia_SUSY_LHC_13TeV"]
       silenceLoop: true
 
   # Choose statistical settings for Monte Carlo event generator
   - capability: MC_ConvergenceSettings
     options:
-      min_nEvents: [5000,5000]
-      max_nEvents: [50000,50000]
-      events_between_convergence_checks: [5000,5000]
-      target_fractional_uncert: [0.3,0.3]
+      min_nEvents: [5000]
+      max_nEvents: [50000]
+      events_between_convergence_checks: [5000]
+      target_fractional_uncert: [0.3]
       halt_when_systematic_dominated: true
       all_SR_must_converge: false
 
@@ -588,14 +568,6 @@ Rules:
       # Pythia_doc_path defaults to the xmldoc directory of the default Pythia
       # backend. So, this must only be set if the user chooses a different Pythia.
       # Pythia_doc_path: "Backends/installed/Pythia/8.212/share/Pythia8/xmldoc/"
-      Pythia_SUSY_LHC_8TeV: ["Print:quiet = on",
-                             "PartonLevel:MPI = off",
-                             "PartonLevel:ISR = on",
-                             "PartonLevel:FSR = on",
-                             "HadronLevel:all = on",
-                             "SUSY:all = on",
-                             "TauDecays:mode = 0",
-                             "TimeShower:pTmin = 20"]
       Pythia_SUSY_LHC_13TeV: ["Print:quiet = on",
                              "PartonLevel:MPI = off",
                              "PartonLevel:ISR = on",
@@ -605,7 +577,15 @@ Rules:
                              "TauDecays:mode = 0",
                              "TimeShower:pTmin = 20"]
 
-      xsec_vetos: [0.048,0.075]  # 0.048 fb correspond to ~1 expected event at L = 20.7 fb^-1.
+      xsec_vetos: [0.028]  # 0.028 fb corresponds to ~1 expected event at L = 36 fb^-1.
+
+  # Choose which type of marginalised Poisson likelihood to use for LHC likelihoods
+  - capability: LHC_LogLikes
+    backends:
+    - {capability: lnlike_marg_poisson_lognormal_error}
+    options:
+      covariance_samples: 100000
+
 
 Logger:
 
