--- a/yaml_files/MSSM9.yaml
+++ b/yaml_files/MSSM9.yaml
@@ -475,11 +475,6 @@ Rules:
       rho0_obs: 0.4
       rho0_obserr: 0.15
 
-  # Choose which type of marginalised Poisson likelihood to use for LHC likelihoods
-  - capability: LHC_LogLikes
-    backends:
-    - {capability: lnlike_marg_poisson_lognormal_error}
-
   # Values to be used in local disk rotation speed likelihood (all values in km/s)
   - capability: lnL_vrot
     function: lnL_vrot_gaussian
@@ -514,6 +509,7 @@ Rules:
       ms_central: 95.E-03
       ms_error: 5.E-03
 
+
   # ATLAS detector simulation
   - capability: SimpleSmearingSim
     type: "ColliderBit::BuckFastSmearATLAS"
@@ -529,22 +525,14 @@ Rules:
     function: getBuckFastCMS
     options:
       partonOnly: [false]
-      antiktR: [0.5]
+      antiktR: [0.4]
       useDetector: [true]
 
   # ATLAS analysis setup.
   - capability: ATLASAnalysisContainer
     function: getATLASAnalysisContainer
     options:
-      analyses: [ ["ATLAS_8TeV_0LEP_20invfb",
-                   "ATLAS_8TeV_0LEPStop_20invfb",
-                   "ATLAS_8TeV_1LEPbb_20invfb",
-                   "ATLAS_8TeV_1LEPStop_20invfb",
-                   "ATLAS_8TeV_2bStop_20invfb",
-                   "ATLAS_8TeV_2LEPEW_20invfb",
-                   "ATLAS_8TeV_2LEPStop_20invfb",
-                   "ATLAS_8TeV_3LEPEW_20invfb"],
-                  ["ATLAS_13TeV_0LEP_36invfb",
+      analyses: [ ["ATLAS_13TeV_0LEP_36invfb",
                    "ATLAS_13TeV_MultiLEP_36invfb",
                    "ATLAS_13TeV_0LEPStop_36invfb",
                    "ATLAS_13TeV_1LEPStop_36invfb",
@@ -552,42 +540,35 @@ Rules:
                    "ATLAS_13TeV_RJ3L_lowmass_36invfb",
                    "ATLAS_13TeV_2bMET_36invfb"] ]
 
-
   # CMS analysis setup
   - capability: CMSAnalysisContainer
     function: getCMSAnalysisContainer
     options:
-      analyses: [ ["CMS_8TeV_1LEPDMTOP_20invfb",
-                   "CMS_8TeV_2LEPDMTOP_20invfb",
-                   "CMS_8TeV_3LEPEW_20invfb",
-                   "CMS_8TeV_MONOJET_20invfb"],
-                  ["CMS_13TeV_0LEP_36invfb",
+      analyses: [ ["CMS_13TeV_0LEP_36invfb",
                    "CMS_13TeV_1LEPbb_36invfb",
                    "CMS_13TeV_2OSLEP_36invfb",
+                   "CMS_13TeV_2LEPsoft_36invfb",
                    "CMS_13TeV_1LEPStop_36invfb",
                    "CMS_13TeV_2LEPStop_36invfb",
-                   "CMS_13TeV_MultiLEP_36invfb"] ]
+                   "CMS_13TeV_MultiLEP_36invfb",
+                   "CMS_13TeV_MONOJET_36invfb" ] ]
 
-                   # "CMS_13TeV_2LEPsoft_36invfb",
-                   # "CMS_13TeV_MONOJET_36invfb",
-
-  # Choose Monte Carlo event simulator and number of events to run.
+  # Choose Monte Carlo event simulator.
   - capability:  ColliderOperator
     function: operateLHCLoop
     options:
-      pythiaNames: ["Pythia_SUSY_LHC_8TeV"]
+      pythiaNames: ["Pythia_SUSY_LHC_13TeV"]
       silenceLoop: true
 
   # Choose statistical settings for Monte Carlo event generator
   - capability: MC_ConvergenceSettings
     options:
-      min_nEvents: [5000,5000]
-      max_nEvents: [50000,50000]
-      events_between_convergence_checks: [5000,5000]
-      target_fractional_uncert: [0.3,0.3]
+      min_nEvents: [5000]
+      max_nEvents: [50000]
+      events_between_convergence_checks: [5000]
+      target_fractional_uncert: [0.3]
       halt_when_systematic_dominated: true
       all_SR_must_converge: false
-
 
   # Define Monte Carlo event simulator and associated options.
   - capability:  HardScatteringSim
@@ -596,14 +577,6 @@ Rules:
       # Pythia_doc_path defaults to the xmldoc directory of the default Pythia
       # backend. So, this must only be set if the user chooses a different Pythia.
       # Pythia_doc_path: "Backends/installed/Pythia/8.212/share/Pythia8/xmldoc/"
-      Pythia_SUSY_LHC_8TeV: ["Print:quiet = on",
-                             "PartonLevel:MPI = off",
-                             "PartonLevel:ISR = on",
-                             "PartonLevel:FSR = on",
-                             "HadronLevel:all = on",
-                             "SUSY:all = on",
-                             "TauDecays:mode = 0",
-                             "TimeShower:pTmin = 20"]
       Pythia_SUSY_LHC_13TeV: ["Print:quiet = on",
                              "PartonLevel:MPI = off",
                              "PartonLevel:ISR = on",
@@ -613,7 +586,14 @@ Rules:
                              "TauDecays:mode = 0",
                              "TimeShower:pTmin = 20"]
 
-      xsec_vetos: [0.048]  # 0.048 fb correspond to ~1 expected event at L = 20.7 fb^-1.
+      xsec_vetos: [0.028]  # 0.028 fb corresponds to ~1 expected event at L = 36 fb^-1.
+
+  # Choose which type of marginalised Poisson likelihood to use for LHC likelihoods
+  - capability: LHC_LogLikes
+    backends:
+    - {capability: lnlike_marg_poisson_lognormal_error}
+    options:
+      covariance_samples: 100000
 
 
 Logger:
